<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlickMix</string>
    <string name="brand_flick">FLICK</string>
    <string name="brand_mix">MIX</string>
    <string name="nav_home">HOME</string>
    <string name="nav_movies">MOVIES</string>
    <string name="nav_tv">TV SHOWS</string>
    <string name="nav_anime">ANIME</string>
    <string name="nav_list">MY LIST</string>
    <string name="nav_continue">CONTINUE WATCHING</string>
    <string name="nav_search">SEARCH</string>
    <string name="nav_settings">SETTINGS</string>
    <string name="nav_sources">SOURCES</string>
    <string name="add_source">ADD SOURCE</string>
    <string name="view_all">VIEW ALL</string>
    <string name="play">PLAY</string>
    <string name="my_list">MY LIST</string>
    <string name="more_info">MORE INFO</string>
    <string name="empty_title">No sources yet</string>
    <string name="empty_body">Add a source to get started. FlickMix plays media you point it at: a direct video URL, an HLS or DASH stream, an M3U playlist from your own server, or a web page opened in the built-in TV browser.</string>
    <string name="empty_cta">ADD YOUR FIRST SOURCE</string>
</resources>
